--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<meta name="msapplication-config" content="https://noahxavier.com/images/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 
+		<!-- Owl Carousel Sheet -->
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.theme.default.min.css">
 		<!-- Tailwind-Css -->
 		<link rel="stylesheet" href="css/tailwind.min.css">
 		<style>
@@ -312,63 +315,119 @@
 				</div>
 			</section>
 			<!-----=====Sec 003=======----->
-			<section id="bg2" class="lg:px-20 xl:px-48 md:px-16 sm:px-10 px-7 my-20 max-w-1240 mx-auto bg-cover bg-center bg-no-repeat" style=" background-image: url(images/bg/How-We-Work-BG.svg);">
-				<!------->
-				<div class="py-20 lg:pt-40 flex icon-erase" id="sec-3">
-					<div>
-						<!--heading-->
-						<div class=" lg:py-28 py-10">
-							<div class="lg:w-3/5 md:4/5 w-full mx-auto text-center text-white">
-								<h1 class=" font-bold lg:text-4xl text-3xl">How We Work</h1>
-								<p class=" font-semibold lg:text-lg text-sm md:px-4 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium lectus sed a tincidunt et viverra. Risus eget id arcu enim. Fermentum lobortis sem facilisi adipiscing tincidunt morbi nulla quis.</p>
-							</div>
+			<section class="bg-radial-gradient lg:px-0 md:px-16 sm:px-10 px-7">
+				<div class="max-w-1240 mx-auto ">
+					<!--heading-->
+					<div class=" py-20">
+						<div class="lg:w-3/5 md:4/5 w-full mx-auto text-center text-white">
+							<h1 class=" font-bold lg:text-4xl text-3xl">How We Work</h1>
+							<p class=" font-semibold lg:text-lg text-sm md:px-4 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium lectus sed a tincidunt et viverra. Risus eget id arcu enim. Fermentum lobortis sem facilisi adipiscing tincidunt morbi nulla quis.</p>
 						</div>
-						<!--001-->
-						<div class=" text-white py-8 flex justify-start">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/01.png);">
-								<p class=" font-semibold text-2xl">01</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Wireframe</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+					</div>
+					<!--carousel-->
+					<div class="pb-20">
+						<div class="owl-carousel owl-theme">
+							<!--01-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy w-auto h-auto mx-auto" data-src="images/slider/s1.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/01.png);">
+											<p class=" font-semibold text-2xl">01</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Wireframe</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<!--002-->
-						<div class=" text-white py-8 flex justify-end">
-							<div class=" bg-contain bg-right bg-no-repeat w-100" style=" background-image: url(images/home/02.png);">
-								<p class=" font-semibold text-2xl text-right">02</p>
-								<h1 class=" font-bold lg:text-4xl text-right text-3xl my-2">Design</h1>
-								<p class=" font-semibold lg:text-lg text-right text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<!--02-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy w-auto h-auto mx-auto" data-src="images/slider/s2.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/02.png);">
+											<p class=" font-semibold text-2xl">02</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Design</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<!--003-->
-						<div class=" text-white py-8 flex justify-start">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/03.png);">
-								<p class=" font-semibold text-2xl">03</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Review</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<!--03-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy md:w-1/2 w-auto h-auto mx-auto" data-src="images/slider/s3.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/03.png);">
+											<p class=" font-semibold text-2xl">03</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Review</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<!--004-->
-						<div class=" text-white py-8 flex justify-end text-right">
-							<div class=" bg-contain bg-no-repeat w-100 bg-right" style=" background-image: url(images/home/04.png);">
-								<p class=" font-semibold text-2xl">04</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Development</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<!--04-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy w-auto h-auto mx-auto" data-src="images/slider/s4.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/04.png);">
+											<p class=" font-semibold text-2xl">04</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Development</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<!--005-->
-						<div class=" text-white py-8 flex justify-start">
-							<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/05.png);">
-								<p class=" font-semibold text-2xl">05</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Final Review</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<!--05-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy md:w-1/2 w-auto h-auto mx-auto" data-src="images/slider/s5.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/05.png);">
+											<p class=" font-semibold text-2xl">05</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Final Review</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
-						</div>
-						<!--006-->
-						<div class=" text-white py-8 flex justify-end text-right">
-							<div class=" bg-contain bg-no-repeat w-100 bg-right" style=" background-image: url(images/home/06.png);">
-								<p class=" font-semibold text-2xl">06</p>
-								<h1 class=" font-bold lg:text-4xl text-3xl my-2">Launch</h1>
-								<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+							<!--06-->
+							<div>
+								<div class="grid grid-cols-2 gap-10 items-center">
+									<!---->
+									<div>
+										<img height="100%" width="100%" class="owl-lazy w-auto h-auto mx-auto" data-src="images/slider/s1.png" alt="//">
+									</div>
+									<!--001-->
+									<div class=" text-white py-8 flex justify-start">
+										<div class=" bg-contain bg-no-repeat w-100" style=" background-image: url(images/home/06.png);">
+											<p class=" font-semibold text-2xl">06</p>
+											<h1 class=" font-bold lg:text-4xl text-3xl my-2">Launch</h1>
+											<p class=" font-semibold lg:text-lg text-sm">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, massa quis nisl tincidunt egestas quis in aliquam. Nulla viverra quam convallis urna. Quis potenti.</p>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -669,18 +728,39 @@
 				</a>
 			</div>
 		</footer>
+
+
+		<script src="js/jquery-3.6.0.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script>
+			$('.owl-carousel').each(function(i) {
+				var owl = $(this);
+				owl.owlCarousel({
+					items: 1,
+					loop:false,
+					nav:false,
+					dots:true,
+					lazyLoad:true,
+					autoplayHoverPause:false,
+					autoplay:true,
+					autoplayTimeout:3000,
+					smartSpeed:2000,
+					margin:10,
+				});
+			});
+			$('.owl-carousel .owl-item').on('mouseenter',function(e){
+				$(this).closest('.owl-carousel').trigger('stop.owl.autoplay');
+			})
+			$('.owl-carousel .owl-item').on('mouseleave',function(e){
+				$(this).closest('.owl-carousel').trigger('play.owl.autoplay',[]);
+			})
+		</script>
+
 		<!--  Alpine Js -->
 		<script src="js/alpine.min.js" defer></script>
 		</script>
 		<!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/20559550.js"></script>
-<!-- End of HubSpot Embed Code -->
+		<script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/20559550.js"></script>
+		<!-- End of HubSpot Embed Code -->
 	</body>
 </html>
-
-
-
-
-
-
-
