--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 				var owl = $(this);
 				owl.owlCarousel({
 					items: 1,
-					loop:false,
+					loop:true,
 					nav:false,
 					dots:true,
 					lazyLoad:true,
